# adventofcode

./: .clang-format  .gitmodules  CMakeLists.txt  main.cpp
Solutions/: Common.hpp  Solution.hpp
Solutions/2017/13/: Solution.cpp
Solutions/2021/1/: Solution.cpp
Solutions/2021/2/: Solution.cpp
Solutions/2021/24/: Solution.cpp
Solutions/2021/3/: Solution.cpp
Solutions/2021/4/: Solution.cpp
Solutions/2022/1/: Solution.cpp
Solutions/2022/10/: Solution.cpp
Solutions/2022/11/: Solution.cpp
Solutions/2022/12/: Solution.cpp
Solutions/2022/13/: Solution.cpp  Solution.js
Solutions/2022/14/: Solution.cpp
Solutions/2022/15/: Solution.cpp
Solutions/2022/16/: Solution.cpp
Solutions/2022/17/: Solution.cpp
Solutions/2022/18/: Solution.cpp
Solutions/2022/19/: Solution.cpp  input
Solutions/2022/2/: Solution.cpp
Solutions/2022/20/: Solution.cpp
Solutions/2022/21/: Solution.cpp
Solutions/2022/22/: Solution.cpp  example  input
Solutions/2022/23/: Solution.cpp
Solutions/2022/3/: Solution.cpp
Solutions/2022/4/: Solution.cpp
Solutions/2022/5/: Solution.cpp
Solutions/2022/6/: Solution.cpp
Solutions/2022/7/: Solution.cpp
Solutions/2022/8/: Solution.cpp
Solutions/2022/9/: Solution.cpp
Solutions/Template/: Solution.cpp
